# OpenCV-C-

./: CMakeLists.txt
1 Basic CMake Skelton/: CMakeLists.txt
1 Basic CMake Skelton/utils/: CMakeLists.txt
